# pico-rust-playground

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  ft2232h-swd.cfg  main.c
.cargo/: config
blink/: CMakeLists.txt  Cargo.toml
blink/src/: lib.rs
hello_epd/: CMakeLists.txt  Cargo.toml
hello_epd/src/: bytes.rs  gpio.rs  lib.rs  spi.rs
pico-sdk/: Cargo.toml  LICENSE  README.md  wrapper.h
pico-sdk-sys/: Cargo.toml  README.md  gen.sh  wrapper.h
pico-sdk-sys/src/: gen.rs  gpio.rs  lib.rs  pwm.rs  spi.rs
pico-sdk/src/: ctypes.rs  gen.rs  lib.rs
pwm_led_fade/: CMakeLists.txt  Cargo.toml
pwm_led_fade/src/: lib.rs
src/: lib.rs
