[package]
name = "hello_epd"
version = "0.1.0"
authors = ["Andelf <andelf@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
rpi-pico-sdk-sys = { path = "../pico-sdk-sys" }
epd = { path = "../../../../Repos/epd" }
embedded-hal = { version = "0.2", features = ["unproven"]}
embedded-graphics = "0.6"
